[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
typhoon = { path = "../typhoon/crates/lib" }
typhoon-token = { path = "../typhoon/crates/token" }
# typhoon = { git = "https://github.com/exotic-markets-labs/typhoon" }
bytemuck = { version = "1.21.0", features = ["derive"] }
pyth-solana-receiver-sdk = "0.5.0"
borsh = "1.5"
