[package]
name = "lobbyist"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lobbyist"

[features]
default = ["typhoon/pinocchio", "typhoon-token/pinocchio"]
custom-panic = []
custom-heap = []

[dependencies]
typhoon = { workspace = true, features = ["borsh"] }
typhoon-token = { workspace = true }
bytemuck = { workspace = true }
borsh = { workspace = true }
autocrat = { git = "https://github.com/metaDAOproject/futarchy.git", branch = "develop", features = [
    "cpi",
] }
amm = { git = "https://github.com/metaDAOproject/futarchy.git", branch = "develop", features = [
    "cpi",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
