[package]
name = "lobbyist"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lobbyist"

[features]
default = []
logging = []
custom-panic = []
custom-heap = []


[dependencies]
typhoon = { version = "0.1.0-alpha.14", features = ["borsh"] }
typhoon-token = "0.1.0-alpha.14"
bytemuck = { version = "1.21.0", features = ["derive"] }
# pyth-solana-receiver-sdk = "0.5.0"
borsh = { version = "1.5", features = ["derive"], default-features = false }
# autocrat = { git = "https://github.com/metaDAOproject/futarchy.git", branch = "develop", features = [
#     "cpi",
# ] }
# amm = { git = "https://github.com/metaDAOproject/futarchy.git", branch = "develop", features = [
#     "cpi",
# ] }

[dev-dependencies]
lazy_static = "1.5.0"
litesvm = "0.6.1"
solana-account = "2.2.1"
solana-instruction = { version = "2.2.1", features = ["borsh"] }
solana-keypair = "2.2.1"
solana-native-token = "3.0.0"
solana-program = "2.2.1"
solana-pubkey = { version = "2.2.1", features = ["borsh"] }
solana-sdk-ids = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
typhoon-instruction-builder = "0.1.0-alpha.14"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
