[package]
name = "lobbyist"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lobbyist"

[features]
default = []
logging = []
custom-panic = []
custom-heap = []


[dependencies]
typhoon = { workspace = true, features = ["borsh", "std"] }
typhoon-token = { workspace = true }
typhoon-errors = { workspace = true }
# typhoon = { version = "0.1.0-alpha.14", features = ["borsh"] }
# typhoon-token = "0.1.0-alpha.14"
bytemuck = { workspace = true, features = ["derive"] }
# pyth-solana-receiver-sdk = "0.5.0"
borsh = { workspace = true, features = ["derive"], default-features = false }
pyth-min = { workspace = true }
# autocrat = { git = "https://github.com/metaDAOproject/futarchy.git", branch = "develop", features = [
#     "cpi",
# ] }
# amm = { git = "https://github.com/metaDAOproject/futarchy.git", branch = "develop", features = [
#     "cpi",
# ] }

[dev-dependencies]
base64 = { workspace = true }
lazy_static = { workspace = true }
litesvm = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true, features = ["borsh"] }
solana-keypair = { workspace = true }
solana-native-token = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true, features = ["borsh"] }
solana-sdk-ids = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
typhoon-instruction-builder = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
